# cdcsink

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  DOCKER.md  Dockerfile  ENV.md  README.md  docker-compose.dev.yml  docker-compose.yml  init-config-data.sql  init-db.sql
config/: connectors.yaml  destinations.yaml  flows.yaml
crates/cdc-api/: Cargo.toml
crates/cdc-api/src/: handlers.rs  lib.rs  response.rs  server.rs
crates/cdc-api/src/handlers/: connectors.rs  destinations.rs  flows.rs
crates/cdc-cli/: Cargo.toml
crates/cdc-cli/src/: main.rs
crates/cdc-config/: Cargo.toml
crates/cdc-config-store/: Cargo.toml
crates/cdc-config-store/src/: backend.rs  lib.rs  models.rs  pg_store.rs  store.rs  unified_store.rs
crates/cdc-config/src/: lib.rs
crates/cdc-connectors/: README.md
crates/cdc-connectors/kafka/: Cargo.toml  README.md
crates/cdc-connectors/kafka/src/: factory.rs  kafka_connector.rs  lib.rs
crates/cdc-connectors/nats/: Cargo.toml  README.md
crates/cdc-connectors/nats/src/: cleanup.rs  factory.rs  lib.rs  nats_connector.rs
crates/cdc-connectors/redis/: Cargo.toml
crates/cdc-connectors/redis/src/: factory.rs  lib.rs  redis_connector.rs
crates/cdc-core/: Cargo.toml
crates/cdc-core/src/: connector.rs  data_record.rs  destination.rs  error.rs  factory.rs  flow.rs  lib.rs  notification.rs  pipeline.rs  registry.rs
crates/cdc-destinations/: README.md
crates/cdc-destinations/mysql/: Cargo.toml  README.md
crates/cdc-destinations/mysql/src/: factory.rs  lib.rs  mysql_destination.rs
crates/cdc-destinations/postgres/: Cargo.toml  README.md  TYPE_MAPPING.md
crates/cdc-destinations/postgres/examples/: type_mapping_example.rs
crates/cdc-destinations/postgres/src/: factory.rs  lib.rs  postgres_destination.rs  type_mapping.rs
scripts/: init-config-data.sql  init-db.sql  nginx.conf  start.sh
src/: main.rs
src/models/: data_record.rs  mod.rs  models_info.rs  nats_receive.rs  postgres_destination.rs
support/run/: Dockerfile.tmp
support/rust-npm/: Dockerfile
ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
ui/src/: App.css  App.tsx  index.css
ui/src/api/: index.ts
ui/src/components/: ErrorBoundary.tsx  Layout.tsx  MetricsChart.tsx  StatsPanel.tsx
ui/src/hooks/: useQueries.ts
ui/src/pages/: ConnectorsPage.tsx  Dashboard.tsx  DestinationsPage.tsx  FlowsPage.tsx
ui/src/store/: systemStore.ts
