[package]
name = "cdcsink"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-nats = "0.46.0"
async-trait = "0.1.89"
chrono = "0.4.43"
dotenvy = "0.15.7"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.18"
tokio = { version = "1.49", features = ["full"] }
uuid = { version = "1.20", features = ["serde", "v4", "v7"] }
