[package]
name = "cdc-api"
version.workspace = true
edition.workspace = true

[dependencies]
cdc-core = { path = "../cdc-core" }
cdc-config-store = { path = "../cdc-config-store" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
