[package]
name = "cdc-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cdc-cli"
path = "src/main.rs"

[dependencies]
cdc-core = { path = "../cdc-core" }
cdc-nats-connector = { path = "../cdc-connectors/nats" }
cdc-redis-connector = { path = "../cdc-connectors/redis" }
cdc-postgres-destination = { path = "../cdc-destinations/postgres" }
cdc-config-store = { path = "../cdc-config-store" }
cdc-api = { path = "../cdc-api" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
dotenvy = "0.15"
