[package]
name = "cdc-config-store"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "json", "chrono"] }
async-trait = "0.1"
tracing = { workspace = true }
cdc-nats-connector = { path = "../cdc-connectors/nats" }
