[package]
name = "cdc-kafka-connector"
version.workspace = true
edition.workspace = true

[dependencies]
cdc-core = { path = "../../cdc-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
# rdkafka = "0.36"  # Uncomment when implementing
