[package]
name = "cdc-mysql-destination"
version.workspace = true
edition.workspace = true

[dependencies]
cdc-core = { path = "../../cdc-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
# sqlx = { workspace = true, features = ["runtime-tokio", "mysql"] }  # Uncomment when implementing
