[package]
name = "cdc-postgres-destination"
version.workspace = true
edition.workspace = true

[dependencies]
cdc-core = { path = "../../cdc-core" }
sqlx = { workspace = true }
tokio-postgres = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
